Добавлен openapi и контроллер для работы
